staticfiles/ibanking/css/banking.css
/* 
css for the index boxes
*/

h1,
h2,
h3 {
    font-weight: bold;
    font-style: bold;
    color: black;
}

h4,
h5,
h6 {
    font-weight: normal;
    font-style: normal;
    color: black;
}

p {
    font-size: 16px;
}

.navbar-light {
    padding: 10px 0 !important;
}

.navbar-light .navbar-nav .nav-link {
    padding: 5px 15px;
    color: black;
    font-weight: bold;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #1b28dd;
}

#index-main {
    min-height: 90vh;
    padding-top: 7vh;
}

#index-main .action-box {
    display: block;
}

#index-main a {
    text-decoration: none;
    color: none;
}

i.bi {
    font-size: 30px;
}

#features h5{
    color: white;
}


/*
* Quick tips
*/

#earning {
    padding-top: 6em;
}

#quickTip {
    padding-top: 4.5em;
}

.nav-tabs .nav-link {
    font-size: 18px;
    font-weight: bold;
}


/*
* testiomonial
*/

#testimonial {
    padding-top: 6em;
}

#testimonial img {
    width: 70px;
    height: 70px;
    object-fit: cover;
    object-position: top;
}

#testimonial .client {
    padding-bottom: 80px;
    text-align: center;
    padding-left: 70px;
    padding-right: 70px;
}


/*
* upToo
*/

#upToo {
    min-height: 100vh;
    padding: 6em 10px;
}

.carousel-dark .carousel-indicators [data-bs-target] {
    width: 15px;
    height: 15px;
    border-radius: 50%;
}

footer p {
    /* color: rgba(36, 36, 36, 0.7); */
    margin: 7px !important;
    padding-left: 10px;
    
}

footer a {
    padding: 0 !important;
    color: black;
}


/*
* Charity page css
*/

#charitypage {
    min-height: 70vh;
    min-width: 100%;
    padding-top: 15vh;
    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("/static/ibanking/images/charity2.jpg");
    background-position: contain;
    color: #FFF;
}

#charitypage h1{
    color: white;
}


/*
*
*  admin css
*
*/

#staffadmin {
    min-height: 100vh;
    background: seagreen;
}

#staffadmin a {
    display: block;
    color: inherit;
}

#staffadmin a .bi {
    font-size: 3rem;
}

.table th {
    font-weight: 700;
    font-size: 16px;
}

.key-features{
    width: 50px;
    height: 50px;
    background: #fff;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.key-features i{
    font-size: 24px;
}

#key-features  h6,  #key-features h4{
    color: #FFF;
}

